# basic-q-learning

./: README.md  pyproject.toml
mouse_and_cheese/: README.md  base_visual.py  design.py  entity.py  main.py  settings.py  train.py
q_learning/: __init__.py  action.py  agent.py  q_table.py  reward_table.py  settings.py
q_learning/action/: __init__.py  action_error.py
q_learning/state/: __init__.py  state.py  state_error.py
q_learning/table/: __init__.py  errors.py  table.py
