[tool.poetry]
name = "q-learning"
version = "0.1.0"
description = "Implementation of basic Q-learning with a Q-table, written in Python."
authors = ["RJW20"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.5.0"
pygame = "^2.6.0"

[tool.poetry.scripts]
main = "mouse_and_cheese.main:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N"]
ignore = [
    "W293",     # White space on blank lines
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
